# rustboard-api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  testscript.sh
.config/: nextest.toml
.github/workflows/:  di.yml  test.yml
.sqlx/: query-05d12a38fd37620954e92403c0d2e3df3d74a11088120ea79fea5998afebd0ec.json  query-080e4a305739c9a009cf2746053eb4c224246e4e784b31848131059e7618298b.json  query-2f11e9f4be6511d3463ea82c158ac0f43c7cedc562dba0b28d46e0bb7f1643fb.json  query-33b26831cb05907c0a91d2e6d7119fdffccbda1289f10d7115c19608f9686f93.json  query-3bf30990ed288d912e0189388ebd9194844fa2d354ad52d9658fe11a536bfe7c.json  query-4241dc421395713ea69b9deb7431281e0c869041837d15f8456901be6c22738e.json  query-443d1efd20b3d8859c3cac3672a535437256db8962622c3415578ccbe433b08d.json  query-5d8894a841d9599bb478c903fefe31126e0f720c7dcd4d87cb221c0487238c41.json  query-750e54f5a7cfba80a334cc1fddea56dd6124274800f7c9c1589378ccdb6c7077.json  query-7821e77d978190ee45f86dbea9570da34f738b329659e029148acdcddb74897d.json  query-7d1d0635dd448ce4e3f0539a01061f7268deaaa0f8c326e62c73cd3a413fde7c.json  query-8302f63323e72c672e7e943e4ad13570f41dda06c09319618dbe65623359811a.json  query-84d656f867fbc4aa0e5f84f02538c8e010ec585d117fc19a852b7188082fd48f.json  query-b3578697c3857242d81f2c97346067266159f6d1387cc4761897f9f8ffde0727.json  query-be36f782a3443b85bc5ed387bf9b04a4fbb9f0c691a93f3b3baa08a7f9fefe1e.json  query-c716ff18991a58c540d5ce7fe59bb75d897ae0456bf3382dac356c53a463fedc.json  query-ceebae74b060b428405baab47caf3b6ffbd3c7e40a13f766fe1950b162504484.json  query-d7b57fb3fafd227f745d9cd308fe35e3e8f6a4d0da65513a33382ca46fd60cb6.json  query-d81da0cb8b8ee7f72bb84ecc104c96e274ecad13eda24e84a7aa7c856b8ca9e6.json  query-e197380ed97a5109c6db91c14699c30bd64547f0729dbf2ca0032835e294b1a9.json  query-e3cdb397ea8f33ed661ddfa57b7133784af9d8e2390375171bb3b21363c3534a.json  query-e55c7b5c9f0c448a15bc9d75ca42fa6567c78c87d0433b83d2c49a0bc67e9c8b.json  query-e7ec6c4d0b13c08cf4e8a039c34c1fa50ffd5fad14dbd43ac5f68a2b4e127845.json  query-eeb760610b7087410cfed9df5e5b4465c8dd9a00816bb918823d7bba1a1ee17d.json  query-f57436afd9429d7720f5875adcf133660fb8fedc7412bf5c6d0374aebf836640.json  query-fcf6d5aea30c233429640ea8059f0da3b33bf95a1cb0f6b7b49d1cc861bf3ef0.json
api/: Cargo.toml
api/benches/: api_bench.rs
api/src/: config.rs  error.rs  lib.rs  main.rs  router.rs  shutdown.rs  state.rs
api/src/auth/: extractor.rs  jwt.rs  password.rs
api/src/client/: notification.rs
api/src/handler/: auth.rs  comment.rs  meta.rs  mod.rs  posts.rs  ws.rs
api/src/middleware/: auth.rs  metric.rs  rate_limit_key.rs
api/src/repository/: comment.rs  mod.rs  posts.rs  types.rs  user.rs
api/src/service/: comments.rs  error.rs  mod.rs  posts.rs  user.rs
api/src/test_utils/: helper.rs  mod.rs  test_server.rs
api/tests/api/: full_flow_test.rs  health_test.rs  main.rs  notification_client_test.rs  post_test.rs  signup_test.rs  snapshot_test.rs  ws_notification_test.rs
api/tests/api/common/: mod.rs  server.rs
api/tests/api/snapshots/: api__health_test__health_check_returns_200_and_ok.snap  api__snapshot_test__snapshot_list_posts.snap  api__snapshot_test__snapshot_unauthorized_error.snap
api_server/: Cargo.toml
api_server/src/: main.rs
domain/: Cargo.toml
domain/src/: comment.rs  const_val.rs  lib.rs  notification.rs  posts.rs  repository.rs  user.rs
helper_sql/: select_all_posts.sql
migrations/: 20260429213858_create_posts.up.sql  20260430231600_create_comments.down.sql  20260430231600_create_comments.up.sql  20260505201128_create_users.up.sql  20260509111002_add_author_id_to_posts.up.sql
notifier/: Cargo.toml
notifier/src/: main.rs  service.rs
proto/: Cargo.toml  build.rs
proto/proto/: notification.proto
proto/src/: lib.rs
rand_core/: Cargo.toml
src/: config.rs  error.rs  extract.rs  lib.rs  main.rs  router.rs  shutdown.rs  state.rs  telemetry.rs
src/auth/: extractor.rs  jwt.rs  mod.rs  password.rs
src/domain/: comment.rs  mod.rs  notification.rs  post.rs  posts.rs  role.rs  user.rs
src/handler/: comment.rs  meta.rs  mod.rs  post.rs  posts.rs  ws.rs
src/middleware/: auth.rs  ip_guard.rs  mod.rs  rate_limit_error.rs  request_id.rs  timing.rs  timing_service.rs
src/repository/: comment.rs  error.rs  mod.rs  post.rs  posts.rs  user.rs
src/routes/: auth.rs  comments.rs  meta.rs  mod.rs  posts.rs
src/service/: comments.rs  error.rs  mod.rs  post.rs  posts.rs  user.rs
telemetry/: Cargo.toml
telemetry/src/: metrics.rs  telemetry.rs
tests/: health_test.rs
tests/api/: health_test.rs  integration_test.rs  main.rs  post_test.rs  signup_test.rs  snapshot_test.rs  ws_notification_test.rs  ws_test.rs
tests/api/common/: mod.rs  server.rs
tests/api/snapshots/: api__snapshot_test__snapshot_create_post_response.snap  api__snapshot_test__snapshot_not_found_error.snap
