[package]
name = "rustboard-api"
version = "0.1.0"
edition = "2024"

[dependencies]
# 트레이트에 async를 사용하기 편하게 만들어 준다.
async-trait = "0.1"
# http 프레임워크
axum = { version = "0.8", features = ["macros"]}
# 시간
chrono = { version = "0.4", features = ["serde"] }
# .env파일에 환경 변수 주입
dotenvy = "0.15"
# 직렳화와 역직렬화
serde = { version = "1", features = ["derive"] }
# serde를 이용해서 json을 다를 수 있다.
serde_json = "1"
serde_with = "3.18.0"
# 데이터베이스
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono"] }
# 오류를 편하게 생성할 수 있다.
thiserror = "2"
# 비동기 런타임
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# axum 미들웨어 작성
tower = "0.5"
# 미들웨어
tower-http = { version = "0.6", features = ["trace"] }
# 구조화 로깅
tracing = "0.1"
# tracing를 터미널로 출력
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# swagger
utoipa = { version = "5", features = ["chrono"] }
# axum에서 swagger사용
utoipa-axum = "0.2"
# swagger Router 생성을 쉽게 할 수 있다.
utoipa-swagger-ui = { version = "9", features = ["axum"] }
# uuid
uuid = { version = "1", features = ["v4"] }
