[package]
name = "rustboard-api"
version = "0.1.0"
edition = "2024"

[dependencies]
# 오류 처리
anyhow = "1"
# argon2id
argon2 = "0.5"
# #[async-tracit]
async-trait = "0.1"
# http 프레임워크
axum = { version = "0.8", features = ["macros"]}
# 시간
chrono = { version = "0.4", features = ["serde"] }
# .env파일에 환경 변수 주입
dotenvy = "0.15"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
password-hash = "0.5"
# 솔트 생성
rand_core = "0.10"
# 정규표현식
regex = "1"
# 직렬화와 역직렬화
serde = { version = "1", features = ["derive"] }
# json
serde_json = "1"
# 데이터베이스
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono"] }
# 오류
thiserror = "2"
# 비동기 런타임
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# axum 미들웨어 작성
tower = "0.5"
# 미들웨어
tower-http = { version = "0.6", features = ["compression-gzip", "cors", "timeout", "trace"] }
# 초당 요청 횟수 제한
tower_governor = { version = "0.8" }
# 구조화 로깅
tracing = "0.1"
# tracing를 터미널로 출력
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# swagger
utoipa = { version = "5", features = ["chrono"] }
# axum에서 swagger사용
utoipa-axum = "0.2"
# swagger Router 생성.
utoipa-swagger-ui = { version = "9", features = ["axum"] }
# uuid
uuid = { version = "1", features = ["v4"] }
