[profile.profiling]
inherits = "release"
debug = true

[workspace]
members = [
  "api",
  "notifier",
  "domain",
  "proto", 
  "telemetry"
, "api_server"]
resolver = "2"

[workspace.dependencies]
# argon2id
argon2 = "0.5"
# 오류 처리
anyhow = "1"
# #[async-tracit]
async-trait = "0.1"
# http 프레임워크
axum = { version = "0.8", features = ["macros", "ws"] }
# 시간
chrono = { version = "0.4", features = ["serde"] }
# .env파일에 환경 변수 주입
dotenvy = "0.15"
futures-util = "0.3"
# JWT
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
# 오픈 텔레메트리, 버전이 일치하지 않으면 컴파일 오류
# 지금 시점에는 tracing-opentelemetry = "0.32", 나머지는 "0.31"로 조정하면 잘 돌아간다.
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["metrics", "rt-tokio", "trace"] }
# PHC 문자열 
password-hash = "0.5"
# GRPC
prost = "0.14"
# 솔트 생성
rand_core = "0.10"
# 정규표현식
regex = "1"
# 직렬화와 역직렬화
serde = { version = "1", features = ["derive"] }
# json
serde_json = "1"
# 데이터베이스
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono"] }
# 오류
thiserror = "2"
# 비동기 런타임
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1" }
# GRPC
tonic = "0.14"
# GRPC
tonic-prost = "0.14"
# axum 미들웨어 작성
tower = { version = "0.5", features = ["util"] }
# 미들웨어
tower-http = { version = "0.6", features = ["compression-gzip", "cors", "timeout", "trace"] }
# 초당 요청 횟수 제한
tower_governor = { version = "0.8" }
# 구조화 로깅
tracing = "0.1"
# 오픈 텔레메트리, 버전이 일치하지 않으면 컴파일 오류
tracing-opentelemetry = "0.32"
# tracing를 터미널로 출력
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# uuid
uuid = { version = "1", features = ["v4"] }
# swagger
utoipa = { version = "5", features = ["chrono"] }
# axum에서 swagger사용
utoipa-axum = "0.2"
# swagger Router 생성.
utoipa-swagger-ui = { version = "9", features = ["axum"] }

##### 테스트용 크레이트
# 벤치마크
criterion = { version = "0.8.2", features = ["html_reports"] }
# 임의의 문자열을 생성한다.
fake = "5"
http-body-util = "0.1"
# 스냅샷 테스트
insta = { version = "1", features = ["json", "yaml", "redactions"] }
reqwest = { version = "0.13", features = ["json"] }
# 테스트용 도커 컨테이너
testcontainers = "0.27"
# 테스트용 도커 컨테이너 - Postgres
testcontainers-modules = { version = "0.15", features = ["postgres"] }
tokio-tungstenite = { version = "0.29", features = ["tokio-rustls"] }
tonic-prost-build = "0.14"
#####