[package]
name = "rustboard-api"
version = "0.1.0"
edition = "2024"

[dependencies]
# 워크스페이스 크레이트
rustboard-domain = {path = "../domain"}
rustboard-notifier = {path = "../notifier"}
rustboard-proto = {path = "../proto"}
rustboard-telemetry = {path = "../telemetry"}
# 외부 크레이트
anyhow = {workspace = true}
argon2 = {workspace = true}
async-trait = {workspace = true}
axum = {workspace = true}
chrono = {workspace = true}
dotenvy = {workspace = true}
futures-util = {workspace = true}
jsonwebtoken = {workspace = true}
opentelemetry = {workspace = true}
opentelemetry-semantic-conventions = {workspace = true}
regex = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
sqlx = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
tokio-stream = {workspace = true}
tonic = {workspace = true}
tower = {workspace = true}
tower-http = {workspace = true}
tower_governor = {workspace = true}
tracing = {workspace = true}
tracing-opentelemetry = {workspace = true}
tracing-subscriber = {workspace = true}
utoipa = {workspace = true}
utoipa-swagger-ui = {workspace = true}
uuid = {workspace = true}

[dev-dependencies]
# fake = {workspace = true}
http-body-util = {workspace = true}
insta = {workspace = true}
reqwest = {workspace = true}
testcontainers = {workspace = true}
testcontainers-modules = {workspace = true}
# tokio-tungstenite = {workspace = true}