[package]
name = "rustboard-api"
version = "0.1.0"
edition = "2024"

[[bench]]
name = "api_bench"
harness = false

[dependencies]
fake = {workspace = true}
# 워크스페이스 크레이트
rustboard-domain = {path = "../domain"}
rustboard-notifier = {path = "../notifier"}
rustboard-proto = {path = "../proto"}
rustboard-telemetry = {path = "../telemetry"}
# 외부 크레이트
anyhow = {workspace = true}
argon2 = {workspace = true}
async-trait = {workspace = true}
axum = {workspace = true}
chrono = {workspace = true}
dotenvy = {workspace = true}
futures-util = {workspace = true}
http-body-util = {workspace = true}
jsonwebtoken = {workspace = true}
opentelemetry = {workspace = true}
opentelemetry-semantic-conventions = {workspace = true}
regex = {workspace = true}
reqwest = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
sqlx = {workspace = true}
testcontainers = {workspace = true}
testcontainers-modules = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
tokio-stream = {workspace = true}
tonic = {workspace = true}
tower = {workspace = true}
tower-http = {workspace = true}
tower_governor = {workspace = true}
tracing = {workspace = true}
tracing-opentelemetry = {workspace = true}
tracing-subscriber = {workspace = true}
utoipa = {workspace = true}
utoipa-swagger-ui = {workspace = true}
uuid = {workspace = true}

[dev-dependencies]
insta = {workspace = true}
criterion = {workspace = true}