[package]
name = "rustboard-domain"
version = "0.1.0"
edition = "2024"

[dependencies]
rustboard-telemetry = {path = "../telemetry"}
anyhow = {workspace = true}
async-trait = {workspace = true}
sqlx = {workspace = true}
serde = {workspace = true}
thiserror = {workspace = true}
chrono = {workspace = true}
regex = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-opentelemetry = {workspace = true}
utoipa = {workspace = true}
uuid = {workspace = true}
