[package]
name = "rustboard-notifier"
version = "0.1.0"
edition = "2024"

[dependencies]
rustboard-telemetry = {path = "../telemetry"}
anyhow = {workspace = true}
rustboard-proto = {path = "../proto"}
tokio = {workspace = true}
tonic = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
uuid = {workspace = true}