[package]
name = "rustboard-telemetry"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = {workspace = true}
opentelemetry = {workspace = true}
opentelemetry_sdk = {workspace = true}
opentelemetry-otlp = {workspace = true}
opentelemetry-semantic-conventions = {workspace = true}
tracing-opentelemetry = {workspace = true}
tracing-subscriber = {workspace = true}